recursion.logo.lessons.recursion.logo.tree.Tree.scala.error
Tree:1: error: Missing closing brace `}' assumed here
var a=getAngle
^Tree:1: error: expected class or object definition
var a=getAngle
^Tree:2: error: expected class or object definition
def tree(steps:Int, length:Double, angle:Double, shrink:Double)    {
^